@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.20-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-20 07:42:01, took 00:13:30, with 60 workers, on 3532 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2024-08-20 08:12:05, took 00:12:59, with 60 workers, on 3532 cases, 2 failed, 0 traces, 15 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -346,8 +346,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-nvgre11.tst">conn-nvgre11.tst</a></td><td>success</td><td>ethernet tunneling with nvgre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-nvgre12.tst">conn-nvgre12.tst</a></td><td>success</td><td>vlan tunneling with nvgre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-nvgre13.tst">conn-nvgre13.tst</a></td><td>success</td><td>tunnel interface with nvgre</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-p4lang01.tst">conn-p4lang01.tst</a></td><td>success</td><td>p4lang demultiplexer</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-p4lang02.tst">conn-p4lang02.tst</a></td><td>success</td><td>p4lang downlink</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-p4lang01.tst">conn-p4lang01.tst</a></td><td>#6-run-r1 tping 100 5 1.1.1.2 vrf v1</td><td>p4lang demultiplexer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-p4lang02.tst">conn-p4lang02.tst</a></td><td>#6-run-r1 tping 100 5 1.1.1.2 vrf v1</td><td>p4lang downlink</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-pckoi01.tst">conn-pckoi01.tst</a></td><td>success</td><td>pckoip over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-pckoi02.tst">conn-pckoi02.tst</a></td><td>success</td><td>pckoip over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-pckoi03.tst">conn-pckoi03.tst</a></td><td>success</td><td>pckoip over pckoip</td></tr>
