@@ -15936,3 +15936,8 @@ failed: dhcp with excluded address
 ---------------------------------- 2024-08-10 06:00:56 24.8.10
 no failed: dhcp with excluded address
 qc pass: dhcp with excluded address
+---------------------------------- 2024-08-20 07:59:06 24.8.20
+no qc pass: p4lang downlink
+no qc pass: p4lang demultiplexer
+failed: p4lang demultiplexer
+failed: p4lang downlink
